--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack-dev-server --config webpack.dev.js --open"
   },
   "dependencies": {
+    "chess.js": "*",
     "express": "^4.18.1",
     "mini-css-extract-plugin": "^2.6.1",
     "nodemon": "^2.0.19",
